Fix product and categories responsiveness, align loader

--- a/styles.css
+++ b/styles.css
@@ -54,7 +54,7 @@ body {
   flex-wrap: wrap;
   align-items: center;
   gap: 3rem;
-  padding: 0 8rem 0 1rem ;
+  padding-left:  1rem ;
 }
 
 .nav_bar > ul > li {
@@ -195,7 +195,9 @@ footer > h6 {
 .product-empty {
   display: flex;
   justify-content: center;
-  margin-left: 100%;
+  align-items: center;
+  height: 100%;
+  grid-column: 1 / -1;
 }
 
 .loader-container {
@@ -213,10 +215,9 @@ footer > h6 {
 
 .loading {
   display: flex;
-  flex-direction: row;
   justify-content: center;
   align-items: center;
-  margin-left: 400px
+  /* margin-left: 400px */
 }
 
 @keyframes spin {
@@ -334,12 +335,13 @@ footer > h6 {
     flex-direction: column;
   }
 
-  .nav_bar > ul {
-    display: none;
-  }
 }
 
 @media screen and (max-width: 500px) {
+   .nav_bar > ul {
+    display: none;
+  }
+
   .mobile {
     display: flex;
   }
@@ -353,6 +355,7 @@ footer > h6 {
     height: 100vh;
     padding: 40px 20px 0;
     display: none;
+    position: fixed;
     /* height: 100vh; */
   }
 
@@ -383,6 +386,23 @@ footer > h6 {
     color: white;
     font-size: 20px;
   }
+  .text_product {
+    padding: 15% 5% 0;
+  }
+  .text_product > h2 {
+    margin: 20px;
+  }
+  
+  .text_product > h3 {
+    margin-bottom: 20px;
+  }
+  .categories-container {
+    flex-direction: column;
+    gap: 1rem;
+    margin: 2rem 0;
+    align-items: center;
+    justify-content: center;
+}
 }
 
 @media screen and (max-width: 320px) {
